feat: data access JPA repository & adapter 구현